--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   width: 100vw;
   color: white;
   overflow-x: hidden;
@@ -12,7 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 60px;
+  font-size: 50px;
 }
 
 #name {
@@ -31,7 +32,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #1b1b32cc;
-  font-size: 2vw;
+  font-size: 4vw;
   margin: 0 auto;
   width: 45vw;
 }
@@ -40,7 +41,7 @@ body {
 #email,
 #age,
 #dropdown {
-  font-size: 80px;
+  font-size: 70px;
 }
 
 .survey-form {
@@ -55,6 +56,8 @@ body {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  padding-left: 20px;
+  font-size: 80px;
   justify-content: space-around;
   gap: 2rem;
 }
@@ -62,6 +65,7 @@ body {
 .form-div input,
 .dropdown {
   width: 40vw;
+  font-size: 70px;
   height: 4vh;
   border-radius: 5px;
 }
@@ -69,6 +73,8 @@ body {
 .radio-container {
   display: flex;
   align-items: start;
+  font-size: 70px;
+  padding-left: 20px;
   justify-content: center;
   flex-direction: column;
   gap: 20px;
@@ -91,6 +97,8 @@ body {
 #div-checkbox {
   display: flex;
   flex-direction: column;
+  padding-left: 20px;
+  font-size: 80px;
   gap: 20px;
 }
 
@@ -109,22 +117,27 @@ body {
   gap: 10px;
 }
 
+.text-div {
+  height: 390px;
+  font-size: 60px;
+}
+
 .text-input {
-  font-size: 100px;
-  width: 2400px;
-  height: 200px;
+  font-size: 80px;
 }
 
 .button {
   display: block;
   width: 100%;
-  padding: 0.75rem;
+  margin-top: 70px;
   background-color: #008000;
   text-align: center;
-  font-size: 100px;
+  font-size: 90px;
   cursor: pointer;
 }
 
 .submit {
-  font-size: 50px;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
 }
