--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -27,7 +27,7 @@ body {
   font-size: 50px;
 }
 
-.main-survey-Form {
+.main-survey-form {
   display: flex;
   align-items: center;
   justify-content: center;
