--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,25 +6,22 @@ body {
   background-attachment: fixed;
   width: 100vw;
   color: white;
-  overflow-x: hidden;
+  height: 100%;
+  /* overflow-x: hidden; */
 }
 
 .head-form {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 50px;
-}
-
-#name {
-  font-size: 15px;
+  font-size: 20px;
 }
 
 #platform {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 50px;
+  font-size: 20px;
 }
 
 .main-survey-form {
@@ -34,22 +31,14 @@ body {
   background-color: #1b1b32cc;
   font-size: 4vw;
   margin: 0 auto;
-  width: 45vw;
+  width: 44vw;
 }
 
 #name,
 #email,
 #age,
 #dropdown {
-  font-size: 70px;
-}
-
-.survey-form {
-  padding: 50px;
-  display: flex;
-  align-items: start;
-  flex-direction: column;
-  justify-content: center;
+  font-size: 20px;
 }
 
 .form-div {
@@ -57,7 +46,8 @@ body {
   align-items: flex-start;
   flex-direction: column;
   padding-left: 20px;
-  font-size: 80px;
+  font-size: 20px;
+  margin-top: 10px;
   justify-content: space-around;
   gap: 2rem;
 }
@@ -65,51 +55,61 @@ body {
 .form-div input,
 .dropdown {
   width: 40vw;
-  font-size: 70px;
-  height: 4vh;
+  font-size: 20px;
+  height: 5vh;
+  border-radius: 5px;
+}
+
+#dropdown {
+  font-size: 20px;
+  width: 41vw;
+  height: 6vh;
   border-radius: 5px;
 }
 
 .radio-container {
   display: flex;
   align-items: start;
-  font-size: 70px;
+  font-size: 20px;
   padding-left: 20px;
   justify-content: center;
   flex-direction: column;
   gap: 20px;
+  margin-top: 10px;
 }
 
 .form-radio {
   display: flex;
   align-items: center;
+  width: 7vw;
+  height: 4vh;
 }
 
+
 #form-radio input {
-  width: 3vw;
+  width: 7vw;
+  height: 4vh;
 }
 
 .radio {
-  width: 70px;
-  height: 80px;
+  width: 20px;
+  height: 20px;
 }
 
 #div-checkbox {
   display: flex;
   flex-direction: column;
   padding-left: 20px;
-  font-size: 80px;
+  font-size: 20px;
   gap: 20px;
+  margin-top: 15px;
 }
 
 .checkbox {
-  height: 60px;
-  width: 50px;
+  height: 19px;
+  width: 19px;
 }
 
-#div-checkbox input {
-  width: 3vw;
-}
 
 .check {
   align-items: center;
@@ -118,26 +118,51 @@ body {
 }
 
 .text-div {
-  height: 390px;
-  font-size: 60px;
+  font-size: 20px;
+  margin-top: 90px;
 }
 
 .text-input {
-  font-size: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  width: 42vw;
+  height: 20vh;
+  margin: 10px;
 }
 
 .button {
   display: block;
-  width: 100%;
-  margin-top: 70px;
+  width: 95%;
+  height: 7vh;
+  margin-bottom: 2%;
   background-color: #008000;
   text-align: center;
-  font-size: 90px;
+  justify-content: center;
+  font-size: 20px;
   cursor: pointer;
 }
 
-.submit {
+.main {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 40px;
+  flex-direction: column;
+  height: 50vh;
+}
+
+.main p {
+  display: flex;
+  text-align: start;
+  margin-bottom: 30px;
+  margin-right: 90px;
+  justify-content: start;
+  font-size: 30px;
+}
+
+@media screen and (max-width: 480px) {
+  .main-survey-form {
+    
+  }
 }
